objects/ContentTransferWithUsers__c.object
<CustomObject>
    <fields>
        <fullName>DOCUMENT_ID_DERIVED__c</fullName>
        <label>DOCUMENT_ID_DERIVED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCUMENT_ID__c</fullName>
        <label>DOCUMENT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_TYPE__c</fullName>
        <label>EVENT_TYPE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILE_PREVIEW_TYPE__c</fullName>
        <label>FILE_PREVIEW_TYPE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FILE_TYPE__c</fullName>
        <label>FILE_TYPE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGANIZATION_ID__c</fullName>
        <label>ORGANIZATION_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_ID__c</fullName>
        <label>REQUEST_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIZE_BYTES__c</fullName>
        <label>SIZE_BYTES</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMESTAMP_DERIVED__c</fullName>
        <label>TIMESTAMP_DERIVED</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMESTAMP__c</fullName>
        <label>TIMESTAMP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSACTION_TYPE__c</fullName>
        <label>TRANSACTION_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID_DERIVED__c</fullName>
        <label>USER_ID_DERIVED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID__c</fullName>
        <label>USER_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_IsActive__c</fullName>
        <label>User_IsActive</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User_Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_Name__c</fullName>
        <label>User_Profile_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_User_Role_Name__c</fullName>
        <label>User_User_Role_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Username__c</fullName>
        <label>User_Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VERSION_ID_DERIVED__c</fullName>
        <label>VERSION_ID_DERIVED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VERSION_ID__c</fullName>
        <label>VERSION_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Content Transfer With Users</label>
    <nameField>
        <displayFormat>CTWU-{0000}</displayFormat>
        <label>Content Transfer With Users ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Transfer With Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>